# talk_cad

./: .aiexclude  .gitignore  README.md  index.html  main.py  pyproject.toml  strategy.md
static/: index.html
