[project]
name = "cad-ai-assistant"
version = "0.1.0"
description = "Ein KI-gestützter CAD-Generator mit Konsistenzprüfung."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.1",
    "openai>=1.12.0",
    "build123d>=0.4.0",
    "numpy>=1.26.0",
]

# Hier kommen Entwicklertools rein (Testing, Formatting)
[dependency-groups]
dev = [
    "ruff>=0.1.15",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Tool Konfigurationen ---

# Ruff ist vom gleichen Team wie uv - das passt perfekt zusammen!
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"] # Error, Pyflakes, Import Sorting
ignore = []

[tool.ruff.format]
quote-style = "double"